Bugfix: CSS File

--- a/war/rapla.css
+++ b/war/rapla.css
@@ -49,7 +49,7 @@ h1 {
 
 
 .gwt-TabBar .gwt-TabBarItem-wrapper { 
-	width: 33%%; 
+	width: 33%; 
 }
 .gwt-TabBar .gwt-TabBarItem { 
 	font-size: 12pt;
