--- a/war/rapla.css
+++ b/war/rapla.css
@@ -83,3 +83,44 @@ h1 {
     opacity: 0.3;
     filter: alpha(opacity=30);
 }
+
+.dateList{
+	width:  20%;
+	margin:	1%;
+	margin-left: 2px;
+	padding: 1%;
+	border: 1px solid #c2c2c2;
+	float: left;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+.datesButtonBar{
+	width: 28px;
+	margin-top: 1%;
+	margin-bottom: 1%;	
+	float: left;
+}
+
+.dateInfos{
+	width:  63%;
+	margin:	1%;
+	padding: 1%;
+	border: 1px solid #c2c2c2;
+	float: left;
+}
+
+.buttonsResourceDates {
+	float: left;
+	width: 28px;
+	background-color: rgb(153, 184, 252);
+	border-radius: 50px;
+	color: white;
+	cursor: pointer;
+	height: 28px;
+	text-align: center;
+	font-size: 20px;
+	display: block;
+	margin-bottom: 3px;
+}
+
