--- a/war/rapla.css
+++ b/war/rapla.css
@@ -153,3 +153,18 @@ h1 {
    font-size: 110%; 
    font-weight: bold;
 }
+.InfoHorizontalPanel {
+background: #eee;
+border: 1px solid #DDD;
+background: -moz-linear-gradient(top, #EEE, #FFF);    
+background: -webkit-linear-gradient(top, #eee, #fff);
+background: -ms-linear-gradient(top, #eee, #fff);
+background: -o-linear-gradient(top, #eee, #fff);
+box-shadow: 1px 2px 4px rgba(0,0,0, .2);
+
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+padding-top: 5px;
+padding-bottom: 10px;
+}
