--- a/war/mwi.css
+++ b/war/mwi.css
@@ -87,6 +87,11 @@
 	border: 1px solid #c2c2c2;
 	cursor: pointer;
 }
+.singleDate:active {
+	padding: 1px;
+	border: 1px solid #c2c2c2;
+	background-color: #f0eded;
+	}
 
 .singleDateSign {
 	width: 10px;
