--- a/war/mwi.css
+++ b/war/mwi.css
@@ -41,7 +41,7 @@
 	padding: 2px;
 	border: 1px solid #c2c2c2;
 	float: left;
-	overflow-y: scroll;
+	overflow-y: active;
 	overflow-x: hidden;
 }
 
@@ -58,7 +58,8 @@
 	padding-left: 3px;
 	border: 1px solid #c2c2c2;
 	float: left;
-	overflow-y: scroll;
+	overflow-y: active;
+	overflow-x: hidden;
 }
 
 .buttonsResourceDates {
