--- a/war/mwi.css
+++ b/war/mwi.css
@@ -238,12 +238,12 @@
 	width: 10px;
 }
 
-.timepickr-main { float: left; position: relative; }
+.timepickr-main { float: left; position: relative; z-index: 10000}
 .timepickr-display { float: left; height:14px; width: 55px; padding:1px; outline: none; text-align: center; border: solid 1px #D8D8D8; }
 .timepickr-popup { position: absolute; left: 0px; top: 20px; width: 500px; }
 .timepickr-row  {       position: relative; background-color: #FFFFFF; clear: both;
         float: left;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;
-        border:1px solid #FFFFFF; }
+        border:1px solid #FFFFFF; z-index: 10000}
 .timepickr-button { cursor: pointer; font-size: 9px; margin: 2px;
         padding: 4px 6px; font-weight: bold; text-align: center; -webkit-border-radius: 4px;
         -moz-border-radius: 4px; border-radius: 4px; background-color: #D2D3D6;
