--- a/war/rapla.css
+++ b/war/rapla.css
@@ -8,7 +8,12 @@
 	margin: 0 5px 5px 5px;
 }
 
+.generalInformation .Course {
+	margin: 0 5px 5px 5px;
+}
+
 .generalInformation .horizontal {
+	margin-top: 10px;
 	height: 20px;
 	display: table-cell;
 }
