--- a/war/mwi.css
+++ b/war/mwi.css
@@ -1,4 +1,4 @@
-.cancelButton, .deleteButton, .saveButton {
+.cancelButton, .deleteButton, .saveButton{
 	float: left !important;
 	width: auto !important;
 	background-color: rgb(153, 184, 252) !important;
@@ -157,7 +157,7 @@
 }
 .dateInfoLineLeft{
 	margin-top: 7px;
-	height: 4em;
+	height: 5em;
 	float: left;
 	display: block;
 }
@@ -237,15 +237,51 @@
 .singleDatesContainer{
 	width: 10px;
 }
+.dateInput{
+	font-weight: bold;
+	display: inline-block;
+	text-decoration: none;
+	text-align: center;
+	color: black;
+	background-color: #F2F2F2;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0px 1px 0px 0px black;
+	-moz-box-shadow: 0px 1px 0px 0px black;
+	box-shadow: 0px 1px 0px 0px black;
+	font-size: 12px;
+	display: inline-block;
+	padding: 6px 5px;	
+	text-decoration: none;
+	-moz-box-shadow: 0 3px 4px -2px #333333 inset;
+	-webkit-box-shadow: 0 3px 4px -2px #333333 inset;
+	box-shadow: 0 3px 4px -2px #333333 inset;
+	border: 1px solid #222222;	
+	background-color: white;
+	background-color: transparent;
+}
 
-.timepickr-main { float: left; position: relative; z-index: 10000}
-.timepickr-display { float: left; height:14px; width: 55px; padding:1px; outline: none; text-align: center; border: solid 1px #D8D8D8; }
-.timepickr-popup { position: absolute; left: 0px; top: 20px; width: 500px; }
-.timepickr-row  {       position: relative; background-color: #FFFFFF; clear: both;
-        float: left;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;
-        border:1px solid #FFFFFF; z-index: 10000}
-.timepickr-button { cursor: pointer; font-size: 9px; margin: 2px;
-        padding: 4px 6px; font-weight: bold; text-align: center; -webkit-border-radius: 4px;
-        -moz-border-radius: 4px; border-radius: 4px; background-color: #D2D3D6;
-        border: 1px solid #B5B6B9; color: #5E6164; float: left; }
-.timepickr-row .state-hover { background-color:#636567; border-color:#636567; color:#FFFFFF; }
+.info, .success, .warning, .error, .validation {
+border: 1px solid;
+margin: 0px 0px 0px 10px;
+padding: 5px 10px 5px 50px;
+background-repeat: no-repeat;
+background-position: 10px center;
+}
+.info {
+color: #00529B;
+background-color: #BDE5F8;
+}
+.success {
+color: #4F8A10;
+background-color: #DFF2BF;
+}
+.warning {
+color: #9F6000;
+background-color: #FEEFB3;
+}
+.error {
+color: #D8000C;
+background-color: #FFBABA;	
+}
