--- a/war/felix.css
+++ b/war/felix.css
@@ -1,1 +1,55 @@
-.dateBoxPopup{z-index:1003}.add-appointment{display:block;margin:0 0 10px 0}.appointment-list,.appointment-options{display:inline-block}.appointment-options{padding-left:10px;vertical-align:top}.appointment-options .gwt-RadioButton{margin:0 5px 5px 5px}.appointment-options .gwt-RadioButton:first-child{margin-left:0}.appointment-options .gwt-Button{margin:10px 5px 10px 0}.appointment-options .appointment-date-form .start-datetime,.appointment-options .appointment-date-form .end-datetime{display:block}.appointment-options .appointment-date-form .date-field{margin-right:10px}.appointment-options .appointment-date-form .time-field{display:inline}.appointment-options .remove-appointment{margin:10px 0 0 0}
+/* FELIX STYLES */
+.dateBoxPopup {
+  z-index: 1003;
+}
+.appointment-panel {
+  display: block;
+}
+.appointment-panel .add-appointment {
+  display: block;
+  margin: 0 0 10px 0;
+}
+.appointment-panel .appointment-list {
+  display: inline-block;
+}
+.appointment-panel .appointment-list option {
+  padding-right: 10px;
+}
+.appointment-panel .appointment-options {
+  display: inline-block;
+  padding-left: 10px;
+  vertical-align: top;
+}
+.appointment-panel .appointment-options .gwt-RadioButton {
+  margin: 0 5px 5px 5px;
+}
+.appointment-panel .appointment-options .gwt-RadioButton:first-child {
+  margin-left: 0;
+}
+.appointment-panel .appointment-options .gwt-Button {
+  margin: 10px 5px 10px 0;
+}
+.appointment-panel .appointment-options .appointment-date-form .start-datetime,
+.appointment-panel .appointment-options .appointment-date-form .end-datetime {
+  display: block;
+}
+.appointment-panel .appointment-options .appointment-date-form .date-field {
+  margin-right: 10px;
+}
+.appointment-panel .appointment-options .appointment-date-form .time-field {
+  display: inline;
+}
+.appointment-panel .appointment-options .remove-appointment {
+  margin: 10px 0 0 0;
+}
+.resource-panel {
+  display: block;
+  margin-top: 15px;
+}
+.resource-panel .resources-list {
+  display: inline-block;
+  min-width: 70px;
+}
+.resource-panel .resources-list option {
+  padding-right: 10px;
+}
