--- a/war/felix.less
+++ b/war/felix.less
@@ -51,11 +51,16 @@
 .resource-panel {
 	display: block;
 	margin-top: 15px;
-	.resources-list {
-		display: inline-block;
-		min-width: 70px;
-		option {
-			padding-right: 10px;
+	.resources-types {
+		display: block;
+	}
+	.resources-lists {
+		margin-top: 10px;
+		.resources-list {
+			min-width: 200px;
+			option {
+				padding-right: 10px;
+			}
 		}
 	}
 }
