--- a/war/rapla.css
+++ b/war/rapla.css
@@ -3,14 +3,31 @@
 
 
 .tabPanel {
-	padding: 5px;
+	/*padding: 5px; */
 }
 
-.content {
-	padding: 0px;
+.textbox {
+	height: 100%;
+	width: 100%
 }
+
+.tbPlanhour {
+	width: 20px;
+	height: 100%;
+}
+
+.grid {
+	margin-bottom: 5px;
+}
+
+.zeile1 {
+	width: 100%;
+}
+
+
 .eventtype {
 	margin: 0 5px 10px 5px;
+	text-align: center;
 }
 .language {
 	margin: 0 5px 10px 5px;
@@ -18,37 +35,58 @@
 
 .course {
 	margin: 0 5px 10px 5px;
-}
+} 
+
 
 
 
 
 .eventname {
 	padding-left: 5px;
-	vertical-align: middle;
-	text-align: center;
-	line-height:20px;
 	color: #777777;
-	margin-top: 5px;
-	margin-bottom: 5px;
 	margin-right: 5px;
+	
 	
 }
 
-.up {
-	width: auto;
-	height: auto;
+
+.planhour {
+	margin-left: 5px;
+	margin-right: 5px;
+	height: 100%;
+	
 }
 
-.down {
-	width: auto;
-	height: auto;
+
+.up::before{
+	content: url('images/triangledown_klein.png');
+
 }
 
-.textbox {
-	line-height: 20px;
-	width: 
+/* .up {
+	height: 15px;
+	width: 15px;
 }
+
+*/
+/*  .down {
+	width: 50%;
+	height: 50%;
+
+}  */
+
+/*  .img {
+	padding-top: 2px;
+	padding-bottom: 4px;
+	padding-right: 2px;
+}
+*/
+/* .img_1 {
+	
+	width: 7px;;
+	height: 7px;
+}  */
+
 
 
 /** Example rules used by the template application (remove for your app) */
