--- a/war/mwi.css
+++ b/war/mwi.css
@@ -1,3 +1,17 @@
+#raplaPopup
+{
+  position: absolute;
+  top: 3%;
+  left: 3%;
+  width: 90%;
+  height: 80%;
+  padding: 16px;
+  border: 6px solid orange;
+  background-color: white;
+  z-index:1002;
+  overflow: auto;
+}
+
 .cancelButton, .deleteButton, .saveButton{
 	float: left !important;
 	width: auto !important;
