bugfix DatePicker; alternative View for reccuringDates

--- a/war/mwi.css
+++ b/war/mwi.css
@@ -11,6 +11,9 @@
   z-index:1002;
   overflow: auto;
 }
+.dateBoxPopup { 
+        z-index: 1003;
+} 
 
 .cancelButton, .deleteButton, .saveButton{
 	float: left !important;
