Embed next free appointment into view

--- a/war/felix.css
+++ b/war/felix.css
@@ -1,60 +1,1 @@
-/* FELIX STYLES */
-.dateBoxPopup {
-  z-index: 1003;
-}
-.appointment-panel {
-  display: block;
-}
-.appointment-panel .add-appointment {
-  display: block;
-  margin: 0 0 10px 0;
-}
-.appointment-panel .appointment-list {
-  display: inline-block;
-}
-.appointment-panel .appointment-list option {
-  padding-right: 10px;
-}
-.appointment-panel .appointment-options {
-  display: inline-block;
-  padding-left: 10px;
-  vertical-align: top;
-}
-.appointment-panel .appointment-options .gwt-RadioButton {
-  margin: 0 5px 5px 5px;
-}
-.appointment-panel .appointment-options .gwt-RadioButton:first-child {
-  margin-left: 0;
-}
-.appointment-panel .appointment-options .gwt-Button {
-  margin: 10px 5px 10px 0;
-}
-.appointment-panel .appointment-options .appointment-date-form .start-datetime,
-.appointment-panel .appointment-options .appointment-date-form .end-datetime {
-  display: block;
-}
-.appointment-panel .appointment-options .appointment-date-form .date-field {
-  margin-right: 10px;
-}
-.appointment-panel .appointment-options .appointment-date-form .time-field {
-  display: inline;
-}
-.appointment-panel .appointment-options .remove-appointment {
-  margin: 10px 0 0 0;
-}
-.resource-panel {
-  display: block;
-  margin-top: 15px;
-}
-.resource-panel .resources-types {
-  display: block;
-}
-.resource-panel .resources-lists {
-  margin-top: 10px;
-}
-.resource-panel .resources-lists .resources-list {
-  min-width: 200px;
-}
-.resource-panel .resources-lists .resources-list option {
-  padding-right: 10px;
-}
+.dateBoxPopup{z-index:1003}.appointment-panel{display:block}.appointment-panel .add-appointment{display:block;margin:0 0 10px 0}.appointment-panel .appointment-list{display:inline-block;min-width:150px}.appointment-panel .appointment-list option{padding-right:10px}.appointment-panel .appointment-options{display:inline-block;padding-left:10px;vertical-align:top}.appointment-panel .appointment-options .gwt-RadioButton{margin:0 5px 5px 5px}.appointment-panel .appointment-options .gwt-RadioButton:first-child{margin-left:0}.appointment-panel .appointment-options .gwt-Button{margin:10px 5px 10px 0}.appointment-panel .appointment-options .appointment-date-form .start-datetime,.appointment-panel .appointment-options .appointment-date-form .end-datetime{display:block}.appointment-panel .appointment-options .appointment-date-form .date-field{margin-right:10px}.appointment-panel .appointment-options .appointment-date-form .time-field{display:inline}.appointment-panel .appointment-options .remove-appointment{margin:10px 0 0 0}.resource-panel{display:block;margin-top:15px}.resource-panel .resources-types{display:block}.resource-panel .resources-lists{margin-top:10px}.resource-panel .resources-lists .resources-list{min-width:300px}.resource-panel .resources-lists .resources-list option{padding-right:10px}
