--- a/war/rapla.css
+++ b/war/rapla.css
@@ -1,7 +1,14 @@
 /** Add css rules here for your application. */
 
 
+.tabPanel {
+	padding-bottom: 10px;
 
+}
+.content{
+	padding-left: 5px;
+
+}
 
 .tabBar {
 	/*background-color: white;*/
@@ -84,9 +91,7 @@
   border-bottom: 2px solid #87ffff;
   margin-right: 2px;
 } */
-.tabPanel {
-	padding: 5px; 
-}
+
 
 .textbox {
 	height: 100%;
@@ -103,7 +108,6 @@
 }
 
 .taInfo {
-	padding-right: 5px;
 	width: 100%
 }
 
@@ -111,9 +115,12 @@
 	width: 100%;
 }
 
+.part2 {
+	padding-right: 15px;
+}
 
 .eventType {
-	margin: 0 5px 10px 5px;
+	margin: 0 5px 10px 0px;
 	text-align: center;
 }
 .language {
@@ -129,7 +136,7 @@
 
 
 .eventname {
-	padding-left: 5px;
+
 	color: #777777;
 	margin-right: 5px;
 	
@@ -138,7 +145,7 @@
 
 
 .planhour {
-	margin-left: 5px;
+	
 	margin-right: 5px;
 	height: 100%;
 	
@@ -147,6 +154,11 @@
 
 .up::before{
 	content: url('images/triangledown_klein.png');
+
+}
+
+.downButton {
+	
 
 }
 
@@ -216,7 +228,7 @@ h1 {
   width: 50%;
   height: 50%;
   padding: 16px;
-  border: 6px solid orange;
+  border: 1px solid cornflowerblue;
   background-color: white;
   z-index:1002;
   overflow: auto;
