Restyle popup for demo

--- a/war/felix.less
+++ b/war/felix.less
@@ -1,4 +1,15 @@
 /* FELIX STYLES */
+.gwt-TabPanel  {
+	width: 100%;
+}
+#raplaPopup {
+	top: 10%;
+	height: auto;
+	border-width: 4px;
+}
+.gwt-TabPanelBottom {
+	padding-right: 25px !important;
+}
 .dateBoxPopup {
 	z-index: 1003;
 }
