--- a/war/rapla.css
+++ b/war/rapla.css
@@ -4,6 +4,14 @@
 
 }
 
+.coursePanel {
+	padding-bottom: 5px;
+	border-style: solid;
+	border-color: cornflowerblue;
+	border-width: 1px;
+	padding-left: 10px;
+	margin-bottom: 10px;
+}
 
 
 .captionLabel{
