--- a/war/felix.less
+++ b/war/felix.less
@@ -105,3 +105,19 @@
 		min-width: 300px;
 	}
 }
+
+.saveDeleteCancelPanel {
+	float: left;
+	button {
+		margin-right: 10px;
+	}
+}
+.history-mgmt {
+	float: right;
+	button {
+		margin-right: 10px;
+		&:last-of-type {
+			margin-right: 0;
+		}
+	}
+}
