--- a/war/felix.less
+++ b/war/felix.less
@@ -106,7 +106,7 @@
 	}
 }
 
-.saveDeleteCancelPanel {
+.saveDeleteCancelHPanel {
 	float: left;
 	button {
 		margin-right: 10px;
@@ -120,4 +120,7 @@
 			margin-right: 0;
 		}
 	}
+}
+.gwt-TabPanelBottom {
+	padding: 20px 6px !important;
 }
