--- a/war/rapla.css
+++ b/war/rapla.css
@@ -1,50 +1,47 @@
 /** Add css rules here for your application. */
-
-
 /** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #777777;
+	margin: 40px 0px 70px;
+	text-align: center;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+	display: block;
+	font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+	margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
 
-#raplaPopup
-{
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  width: 50%;
-  height: 50%;
-  padding: 16px;
-  border: 6px solid orange;
-  background-color: white;
-  z-index:1002;
-  overflow: auto;
+#raplaPopup {
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	width: 50%;
+	height: 50%;
+	padding: 16px;
+	border: 6px solid orange;
+	background-color: white;
+	z-index: 1002;
+	overflow: auto;
 }
 
 /* ADD BUTTON for new event */
@@ -62,17 +59,18 @@ h1 {
 }
 
 .week.table {
-	padding-top: 20px;	
+	padding-top: 20px;
+	border-collapse: collapse;
 }
 
 .week.table td, .week.table tr {
 	border-color: black;
-	border: 1px solid; 
+	border: 1px solid;
 	height: 19px;
 	padding: 1px;
 }
 
-.week.table table{
+.week.table table {
 	width: 100%;
 }
 
@@ -82,9 +80,11 @@ h1 {
 	height: 100%;
 	border-radius: 3px;
 }
-.week.table .event.dragging{
+
+.week.table .event.dragging {
 	cursor: pointer;
 }
+
 .event.dragging {
 	background-color: rgba(237, 237, 237, 0.47);
 }
