--- a/war/rapla.css
+++ b/war/rapla.css
@@ -64,19 +64,20 @@ h1 {
 }
 
 .week.table td, .week.table tr {
+	min-height: 19px;
 	border-color: black;
 	border: 1px solid;
-	height: 19px;
-	padding: 1px;
+	padding: 2px;
 }
 
 .week.table table {
+	display: table;
 	width: 100%;
 }
 
 /* Event style */
 .event {
-	background-color: rgb(237, 237, 237);
+	width: 100%;
 	height: 100%;
 	border-radius: 3px;
 }
