--- a/war/rapla.css
+++ b/war/rapla.css
@@ -60,14 +60,16 @@ h1 {
 
 .week.table {
 	padding-top: 20px;
-	border-collapse: collapse;
+	/* 	border-collapse: collapse; */
 }
 
 .week.table td, .week.table tr {
-	min-height: 19px;
-	border-color: black;
-	border: 1px solid;
-	padding: 2px;
+	padding: 0px;
+}
+
+.week.table td {
+	padding-right: 2px;
+	vertical-align: top;
 }
 
 .week.table table {
@@ -75,17 +77,41 @@ h1 {
 	width: 100%;
 }
 
-/* Event style */
-.event {
-	width: 100%;
-	height: 100%;
-	border-radius: 3px;
+.week.table .header {
+	background-color: #aaaaaa;
+/* 	border-width: 2px; */
+	border-color: black;
+	border-right-width: 1px;
+/* 		border: 1px solid; */
 }
 
-.week.table .event.dragging {
+.week.table .emptyDayRow {
+	
+}
+
+.week.table .empty {
+	border-right-width: 0px;
+	border-left-width: 0px;
+	border-top-width: 0px;
+	border-bottom-width: 1px;
+	border-color: #CCCCCC;
+}
+
+/* Event style */
+.week.table td.eventTd {
+	border-right-style: groove;
+	border-right-width: 2px;
+}
+
+.event {
+/*   width: 70px; */
+  overflow: hidden;
+}
+
+.week.table .eventTd {
 	cursor: pointer;
 }
 
-.event.dragging {
-	background-color: rgba(237, 237, 237, 0.47);
+.event p {
+	margin: 10px 2px;
 }
