--- a/war/mwi.css
+++ b/war/mwi.css
@@ -347,7 +347,6 @@ border-right: 2px solid black !important;
 }
 .dateInput{
 	font-weight: bold;
-	display: inline-block;
 	text-decoration: none;
 	text-align: center;
 	color: black;
@@ -355,19 +354,38 @@ border-right: 2px solid black !important;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	-webkit-box-shadow: 0px 1px 0px 0px black;
-	-moz-box-shadow: 0px 1px 0px 0px black;
-	box-shadow: 0px 1px 0px 0px black;
 	font-size: 12px;
 	display: inline-block;
 	padding: 6px 5px;	
 	text-decoration: none;
-	-moz-box-shadow: 0 3px 4px -2px #333333 inset;
-	-webkit-box-shadow: 0 3px 4px -2px #333333 inset;
-	box-shadow: 0 3px 4px -2px #333333 inset;
 	border: 1px solid #222222;	
 	background-color: white;
 	background-color: transparent;
+}
+.resourceButton{
+	display:block;
+	width: 240px;
+	font: bold;
+	background-color: #f0eded;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid #222222;	
+	padding: 5px;
+	margin-bottom: 5px;
+}
+.resourceButton:hover {
+	background-color: #d6d8d9;
+}
+.resourceButton:active {
+	position:relative;	
+	top:1px;
+}
+
+.resourceButtonPanel{
+	width: 300px;
+	border-bottom: 1px solid #222222;
+	margin-bottom: 3px;
 }
 
 .info, .success, .warning, .error, .validation {
