--- a/war/mwi.css
+++ b/war/mwi.css
@@ -89,7 +89,7 @@ border-right: 2px solid black !important;
 	padding: 2px;
 	border: 1px solid #c2c2c2;
 	float: left;
-	overflow-y: active;
+	overflow-y: auto;
 	overflow-x: active;
 }
 
