--- a/war/mwi.css
+++ b/war/mwi.css
@@ -162,7 +162,7 @@ border-right: 2px solid black !important;
 }
 
 .singleDate {
-	width: 98%;
+	width: 240px;
 	padding: 2px;
 	margin-bottom: 2px;
 	overflow-x: hidden;
@@ -206,7 +206,7 @@ border-right: 2px solid black !important;
 }
 
 .multiDateInfos {
-	width: 98;
+	width: 250px;
 	float: left;
 }
 
