--- a/war/mwi.css
+++ b/war/mwi.css
@@ -31,8 +31,21 @@
 	margin-bottom: 4px !important;
 }
 
+.searchInput{
+	text-decoration: none;
+	color: black;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 12px;
+	display: inline-block;
+	padding: 6px 5px;	
+	text-decoration: none;
+	border: 1px solid #222222;	
+	background-color: transparent;
+	margin: 5px;
 
-
+}
 
 .buttonLoupe{
 	margin: 5px !important;
@@ -48,8 +61,9 @@
 
 .filterWindow{
 	width: auto !important;
+	height: auto;
 	margin-top: 5px !important;	
-	z-index: 1004;
+	z-index: 1004 !important;
 }
 
 /*
@@ -337,6 +351,7 @@ border-right: 2px solid black !important;
 	width: 100%;
 	height: auto;
 	clear: both;
+	z-index: 1002 !important;
 }
 .singleDatesContainer{
 	width: 10px;
@@ -419,7 +434,9 @@ margin: 5px;
 
 .suchfeld{
 	/*height: 85px !important;*/
+	z-index: 1003 !important;
 }
+
 .errorPanel{
   position: absolute;
   top: 3%;
