added nice scroll bars

--- a/war/mwi.css
+++ b/war/mwi.css
@@ -548,3 +548,16 @@ margin: 5px;
 	    margin-bottom: 5px;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    background-color: #eaeaea;
+    border-left: 1px solid #ccc;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #aaa;
+}
