--- a/war/mwi.css
+++ b/war/mwi.css
@@ -60,6 +60,7 @@
 }
 
 .filterWindow{
+	position: absolute;
 	width: auto !important;
 	height: auto;
 	margin-top: 5px !important;	
@@ -270,7 +271,7 @@ border-right: 2px solid black !important;
 }
 
 .beschriftung{
-	margin-bottom: 2px;
+	margin-bottom: 5px;
 	font-weight: bold;
 	margin-left: 5px;
 }
@@ -279,6 +280,7 @@ border-right: 2px solid black !important;
 	height: 5em;
 	float: left;
 	display: block;
+	margin-left: 5px;
 }
 
 .resourceContainer{
@@ -299,6 +301,7 @@ border-right: 2px solid black !important;
 	float: left;
 	width: 100%;
 	display: block;
+	padding-left:5px;
 	
 }
 
@@ -564,4 +567,8 @@ margin: 5px;
     background-color: #aaa;
 }
 
+.extraInhalt{
+	postition: absolute !important;
+	z-index: 1004 !important;
+}
 
