--- a/war/mwi.css
+++ b/war/mwi.css
@@ -6,7 +6,7 @@
   width: 90%;
   height: 80%;
   padding: 16px;
-  border: 6px solid orange;
+  border: 4px solid #99b8fc;
   background-color: white;
   z-index:1002;
   overflow: auto;
@@ -105,7 +105,7 @@ border-right: 2px solid black !important;
 	border: 1px solid #c2c2c2;
 	float: left;
 	overflow-y: auto;
-	overflow-x: active;
+	overflow-x: hidden;
 }
 
 .wildcard{
@@ -569,6 +569,8 @@ margin: 5px;
 
 .extraInhalt{
 	postition: absolute !important;
-	z-index: 1004 !important;
+	z-index: 1006 !important;
+	left: 0;
 }
+
 
