Add remove-resource button

--- a/war/felix.less
+++ b/war/felix.less
@@ -91,7 +91,7 @@
 	}
 	
 	.resources-lists {
-		margin: 10px 10px 0 0;
+		margin: 10px 0 0 0;
 		display: inline-block;
 		.resources-list {
 			min-width: 300px;
@@ -99,6 +99,14 @@
 				padding-right: 10px;
 			}
 		}
+	}
+	.resource-add-remove {
+		display: inline-block;
+		margin: 40px 10px 0 10px;
+  		vertical-align: top;
+  		.gwt-Button {
+  			margin: 5px 0;
+  		}
 	}
 	.booked-resources {
 		display: inline-block;
